-
Type:
Bug
-
Status: Closed
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 0.9.1
-
Fix Version/s: 0.9.2
-
Component/s: Build Process, C glib - Library
-
Labels:
-
Environment:
Thrift is available in Buildroot which is a cross-compilation tool.
Thrift is compiled in autobuilder system with different toolchain configuration.Buildroot's autobuilder reported some issues like this one :
http://autobuild.buildroot.net/results/ff7/ff7ab52c3965f9545c197f7552d3bc629b900886/build-end.logThe toolchain used is an CT-NG toolchain with uclibc targeting an X86_64 atom.
Tools version:
Buildroot: 2014.02-rc1 (git)
Boost: 1.55.0
openssl: 1.0.1f
libevent:2.0.21To reproduce the build failure,
you may find the buildroot's configuration here:
http://autobuild.buildroot.net/results/ff7/ff7ab52c3965f9545c197f7552d3bc629b900886/configThrift is available in Buildroot which is a cross-compilation tool. Thrift is compiled in autobuilder system with different toolchain configuration. Buildroot's autobuilder reported some issues like this one : http://autobuild.buildroot.net/results/ff7/ff7ab52c3965f9545c197f7552d3bc629b900886/build-end.log The toolchain used is an CT-NG toolchain with uclibc targeting an X86_64 atom. Tools version: Buildroot: 2014.02-rc1 (git) Boost: 1.55.0 openssl: 1.0.1f libevent:2.0.21 To reproduce the build failure, you may find the buildroot's configuration here: http://autobuild.buildroot.net/results/ff7/ff7ab52c3965f9545c197f7552d3bc629b900886/config
-
Patch Info:Patch Available
When Thrift is built for an 64 bits system,
the uint64_t type may be already defined in stdint.h.
"error: reference to 'uint64_t' is ambiguous"
To avoid this error, you need to use explicitly the uint64_t typedef from Boost.
So, I propose a quick patch that corrects this error.
I reported this issue as Blocker since the build fails but there is no emergency
Best regards,
Romain Naour