THRIFT-2367 Build failure: stdlib and boost both define uint64_t

Fix: remove "using namespace boost;"
Patch: Roger Meier